fix: no gap below section help

--- a/src/scss/shared/help.scss
+++ b/src/scss/shared/help.scss
@@ -19,6 +19,7 @@
 
 .section_help {
     display: flex;
+    margin-bottom: $gap;
 
     + .subsection {
         margin-top: $gap;
